Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ body {
     margin: 0;
 }
 
+
+.text {
+    padding: 60px;
+    text-align: center;
+    background: #1abc9c;
+    color: white;
+    font-size: 30px;
+  }
+  
 /* Container positioning */
 .container {
     position: relative;
@@ -43,14 +52,13 @@ body {
     border-radius: 30px 0 0 0;
 }
 
-/* CARD FIX: Increase width & height */
 .card {
     position: absolute;
     background-color: #eae2b7;
-    width: 320px;  
-    height: 300px;  
+    width: 250px;  
+    height: 200px;  
     padding: 20px;
-    top: 5px;
+    top: 0px;
     left: 15px;
     box-shadow: -5px -5px 100px rgba(0, 0, 0, 0.4);
     transform: translateY(0);
@@ -87,14 +95,14 @@ body {
     opacity: 0;
 }
 
-/* FIX SHADOW POSITION */
 .shadow {
     position: absolute;
     width: 320px;  /* Match envelope width */
     height: 20px;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.3);
-    top: 280px; /* Adjusted for better alignment */
+    top: 730px; /* Adjusted for better alignment */
+    left: 20;
     animation: scale 3s linear infinite;
     z-index: -1;
 }
